force-app/core/sfpegUtilities/objects/sfpegTestObject__c/sfpegTestObject__c.object-meta.xml
<CustomObject>
    <description>Custom Object to support the test classes of the Apex controllers for the sfpeg LWC components</description>
    <label>sfpegTestObject</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>sfpegTestObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>