force-app/core/sfpegUtilities/objects/sfpegTestObject__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sfpegCountries</valueSetName>
    </valueSet>
</CustomField>