force-app/core/sfpegUtilities/objects/sfpegTestObject__c/fields/CountryCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCode__c</fullName>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sfpegCountryCodes</valueSetName>
    </valueSet>
</CustomField>