force-app/core/sfpegUtilities/objects/sfpegTestObject__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>External ID of the record.</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>