force-app/core/sfpegUtilities/objects/sfpegTestObject__c/fields/MultiPicklist__c.field-meta.xml
<CustomField>
    <fullName>MultiPicklist__c</fullName>
    <label>MultiPicklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MP1</fullName>
            </value>
            <value>
                <fullName>MP2</fullName>
            </value>
            <value>
                <fullName>MP3</fullName>
            </value>
            <value>
                <fullName>MP4</fullName>
            </value>
            <value>
                <fullName>MP5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>