force-app/core/sfpegUtilities/objects/sfpegTestObject__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For hierarchy test cases</description>
    <inlineHelpText>For hierarchy test cases</inlineHelpText>
    <label>Parent</label>
    <referenceTo>sfpegTestObject__c</referenceTo>
    <relationshipLabel>Children</relationshipLabel>
    <relationshipName>Children</relationshipName>
    <type>Lookup</type>
</CustomField>