force-app/core/sfpegUtilities/objects/sfpegTestObject__c/fields/TextArea__c.field-meta.xml
<CustomField>
    <fullName>TextArea__c</fullName>
    <description>for tests</description>
    <label>TextArea</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>