force-app/core/sfpegUtilities/objects/sfpegTestObject__c/recordTypes/sfpegRT1.recordType-meta.xml
<RecordType>
    <fullName>sfpegRT1</fullName>
    <active>true</active>
    <description>Test RT</description>
    <label>sfpegRT1</label>
</RecordType>