force-app/core/sfpegUtilities/objects/sfpegTestObject__c/recordTypes/sfpegRT2.recordType-meta.xml
<RecordType>
    <fullName>sfpegRT2</fullName>
    <active>true</active>
    <description>Test RT</description>
    <label>sfpegRT2</label>
</RecordType>