force-app/core/sfpegUtilities/objects/sfpegTestObject__c/validationRules/sfpegExcelLoaderTest.validationRule-meta.xml
<ValidationRule>
    <fullName>sfpegExcelLoaderTest</fullName>
    <active>true</active>
    <description>Validation rule to generate DML exception for sfpegExcelLoader_TST class</description>
    <errorConditionFormula>Name == &apos;sfpegExcelLoaderError&apos;</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>No record with name sfpegExcelLoaderError may be created</errorMessage>
</ValidationRule>